<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorBack"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="100dp"
        android:layout_above="@+id/linearLayout" />
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/fab_margin"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/Usuario"
            android:layout_height="wrap_content"
            android:id="@+id/username"/>
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/Contraseña"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="@drawable/buttonlog"
            android:textColor="@color/ColorWhite"
            android:text="@string/login"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="@drawable/buttonlog"
            android:textColor="@color/ColorWhite"
            android:text="@string/register"/>

    </LinearLayout>

</RelativeLayout>