<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorBack"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/txtViewUNADECA"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorAccent"
        android:text="@string/UNADECA"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        />
    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="match_parent"
        android:layout_alignParentTop="@+id/txtViewUNADECA"
        android:layout_height="285dp"
        android:layout_above="@+id/linearLayout" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Usuario" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Contraseña"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="match_parent"
            android:hint="Comentario"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/Comentario"/>


        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="@drawable/buttonlog"
            android:text="@string/register"
            android:textColor="@color/ColorWhite" />

    </LinearLayout>

</RelativeLayout>